# kbuc-gpu-miner

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_ui.ps1  generate_python_protos.ps1  miner_config.json  vcpkg.json
build_ui/: CMakeCache.txt
proto/: miner.proto
rest_server/: generate_python_protos.ps1  miner_pb2.py  miner_pb2_grpc.py  monitor_mining.ps1  requirements.txt  server.py
src/: bitcoin_rpc.hpp  hash_writer.cpp  hash_writer.hpp  main.cpp  miner.cu  miner.cuh  miner_config.hpp  miner_service.cpp  miner_service.h
src/ui/: CMakeLists.txt  cuda_miner.cpp  cuda_miner.h  history_dialog.cpp  history_dialog.h  main.cpp  main_window.cpp  main_window.h  mining_task.cpp  mining_task.h  settings_dialog.cpp  settings_dialog.h
